# preconversion-assistant

./: .gitignore  Makefile.am  README.md  common-rules.mk  configure.ac  podwrapper.pl.in  run.in  subdir-rules.mk
build-aux/: .gitignore
linux/: Makefile.am  main.c
windows/: Makefile.am  main.c
windows/gui/: Makefile.am  ui.cpp
